@@ -15,7 +15,9 @@ Agregar función de "Memory Cheat": util para encontrar contadores de energia, b
 Agregado menú para buscar cadenas de texto
 Mejorada compilación: opciones --enable-memptr --enable-visualmem --enable-cpustats están activadas por defecto en ./configure
 Mejorado debug cpu history: permitir cambiar el puntero de memoria según el registro PC mostrado en el historial
-Mejorado Hexadecimal editor: ahora los datos se refrescan también cuando la ventana tiene el foco
+Mejorado Hexadecimal editor:
+- Ahora los datos se refrescan también cuando la ventana tiene el foco
+- Ahora el puntero de memoria puede seguir una expresión (un registro de la CPU por ejemplo)
 
 Mejorado ZX Vision:
 - Al seleccionar estilo de ZX Vision Style, se aplica al mover el cursor
